Making it workable on colab

--- a/code/1_Getting_Labeled_Data.ipynb
+++ b/code/1_Getting_Labeled_Data.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "1_Getting_Labeled_Data.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,16 +14,76 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rgranit/academix-ydata-project/blob/master/code/1_Getting_Labeled_Data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yGFkbYhGrpCq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "fc67a62f-84f2-4e5e-b856-74dac9de5767"
       },
       "source": [
         "''' Initializations '''\n",
         "\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import os\n",
+        "from getpass import getpass\n",
+        "import urllib\n",
+        "\n",
+        "user = input('User name: ')\n",
+        "password = getpass('Password: ')\n",
+        "password = urllib.parse.quote(password) # your password is converted into url format\n",
+        "PATH = \"/content/AYP/data/labeled_dataset/source_files/\""
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "User name: ShaulSolomon\n",
+            "Password: ··········\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EinztUT9D1OJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cmd_string = '! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP'.format(user, password)\n",
+        "\n",
+        "os.system(cmd_string)\n",
+        "cmd_string, password = \"\", \"\" # removing the password from the variable"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1voj-ngzFZnL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "! cd /content/AYP"
       ],
       "execution_count": 0,
       "outputs": []
@@ -48,23 +109,26 @@
       "metadata": {
         "id": "d3FIfCZPsCzz",
         "colab_type": "code",
+        "outputId": "5692d99e-2582-446e-83b2-500f09eee447",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "35ff9fe0-a3ee-4417-c13a-4f77bb7f0335"
+          "height": 102
+        }
       },
       "source": [
-        "!unzip /content/RePORTER_PUBLNK_C_2014.zip\n",
-        "!unzip /content/nih_prj.zip"
+        "!unzip /content/AYP/data/labeled_dataset/source_files/RePORTER_PUBLNK_C_2014.zip -d /content/AYP/data/labeled_dataset/source_files/\n",
+        "!unzip /content/AYP/data/labeled_dataset/source_files/nih_prj.zip -d /content/AYP/data/labeled_dataset/source_files/"
       ],
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Archive:  /content/RePORTER_PUBLNK_C_2014.zip\n",
-            "  inflating: RePORTER_PUBLNK_C_2014.csv  \n"
+            "Archive:  /content/AYP/data/labeled_dataset/source_files/RePORTER_PUBLNK_C_2014.zip\n",
+            "replace /content/AYP/data/labeled_dataset/source_files/RePORTER_PUBLNK_C_2014.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
+            "  inflating: /content/AYP/data/labeled_dataset/source_files/RePORTER_PUBLNK_C_2014.csv  \n",
+            "Archive:  /content/AYP/data/labeled_dataset/source_files/nih_prj.zip\n",
+            "  inflating: /content/AYP/data/labeled_dataset/source_files/RePORTER_PRJ_C_FY2014.csv  \n"
           ],
           "name": "stdout"
         }
@@ -75,17 +139,17 @@
       "metadata": {
         "id": "0VulUjqzsa8X",
         "colab_type": "code",
+        "outputId": "4cdc7fee-9588-4747-81f1-9eeaa5eba227",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "92c54604-c207-4c6f-fdf9-90663ba22aab"
+        }
       },
       "source": [
-        "publnk = pd.read_csv(\"/content/RePORTER_PUBLNK_C_2014.csv\")\n",
-        "pubprj = pd.read_csv(\"/content/RePORTER_PRJ_C_FY2014.csv\", encoding='latin-1')"
+        "publnk = pd.read_csv(PATH + \"RePORTER_PUBLNK_C_2014.csv\")\n",
+        "pubprj = pd.read_csv(PATH + \"RePORTER_PRJ_C_FY2014.csv\", encoding='latin-1')"
       ],
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,17 +166,17 @@
       "metadata": {
         "id": "z9O1M7-xsfdk",
         "colab_type": "code",
+        "outputId": "b3400f46-b1e5-4237-80b7-8325f6d98f51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        },
-        "outputId": "ffd89f4d-769d-4bd4-a79d-36d3e5d52618"
+        }
       },
       "source": [
         "print(pubprj.columns)\n",
         "print(publnk.columns)"
       ],
-      "execution_count": 26,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,16 +228,16 @@
       "metadata": {
         "id": "UmDJHRTz1W2l",
         "colab_type": "code",
+        "outputId": "83435eb0-710c-43bd-97ee-594b0b4cd273",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        },
-        "outputId": "83435eb0-710c-43bd-97ee-594b0b4cd273"
+        }
       },
       "source": [
         "pubmed_join"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
