Reworking for larger dataset - in production

--- a/code/1_Getting_Labeled_Data.ipynb
+++ b/code/1_Getting_Labeled_Data.ipynb
@@ -28,52 +28,53 @@
       "metadata": {
         "id": "yGFkbYhGrpCq",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "fc67a62f-84f2-4e5e-b856-74dac9de5767"
+        "colab": {}
       },
       "source": [
         "''' Initializations '''\n",
         "\n",
         "import pandas as pd\n",
-        "import os\n",
+        "import os, zipfile\n",
         "from getpass import getpass\n",
         "import urllib\n",
         "\n",
+        "PATH = \"/content/AYP/data/labeled_dataset/source_files/\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eIJe_bmId-yY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "d0bd6742-9b46-43c6-b484-90f14f6bc8f5"
+      },
+      "source": [
         "user = input('User name: ')\n",
         "password = getpass('Password: ')\n",
         "password = urllib.parse.quote(password) # your password is converted into url format\n",
-        "PATH = \"/content/AYP/data/labeled_dataset/source_files/\""
+        "cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
+        "\n",
+        "os.system(cmd_string)\n",
+        "cmd_string, password = \"\", \"\" # removing the password from the variable"
       ],
-      "execution_count": 21,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "User name: ShaulSolomon\n",
-            "Password: ··········\n"
+            "Password: ··········\n",
+            "! git clone https://ShaulSolomon:notmyactualpassword@github.com/rgranit/academix-ydata-project AYP\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EinztUT9D1OJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "cmd_string = '! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP'.format(user, password)\n",
-        "\n",
-        "os.system(cmd_string)\n",
-        "cmd_string, password = \"\", \"\" # removing the password from the variable"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -116,10 +117,19 @@
         }
       },
       "source": [
-        "!unzip /content/AYP/data/labeled_dataset/source_files/RePORTER_PUBLNK_C_2014.zip -d /content/AYP/data/labeled_dataset/source_files/\n",
-        "!unzip /content/AYP/data/labeled_dataset/source_files/nih_prj.zip -d /content/AYP/data/labeled_dataset/source_files/"
+        "extension = \".zip\"\n",
+        "\n",
+        "#os.chdir(PATH) # change directory from working dir to dir with files\n",
+        "\n",
+        "for item in os.listdir(PATH): # loop through items in dir\n",
+        "    if item.endswith(extension): # check for \".zip\" extension\n",
+        "        file_name = os.path.abspath(item) # get full path of files\n",
+        "        zip_ref = zipfile.ZipFile(file_name) # create zipfile object\n",
+        "        zip_ref.extractall(dir_name) # extract file to dir\n",
+        "        zip_ref.close() # close file\n",
+        "        #os.remove(file_name) # delete zipped file"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,10 +156,14 @@
         }
       },
       "source": [
+        "!unzip /content/AYP/data/labeled_dataset/source_files/RePORTER_PUBLNK_C_2014.zip -d /content/AYP/data/labeled_dataset/source_files/\n",
+        "!unzip /content/AYP/data/labeled_dataset/source_files/nih_prj.zip -d /content/AYP/data/labeled_dataset/source_files/\n",
         "publnk = pd.read_csv(PATH + \"RePORTER_PUBLNK_C_2014.csv\")\n",
-        "pubprj = pd.read_csv(PATH + \"RePORTER_PRJ_C_FY2014.csv\", encoding='latin-1')"
+        "pubprj = pd.read_csv(PATH + \"RePORTER_PRJ_C_FY2014.csv\", encoding='latin-1')\n",
+        "print(pubprj.columns)\n",
+        "print(publnk.columns)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,44 +172,6 @@
             "  interactivity=interactivity, compiler=compiler, result=result)\n"
           ],
           "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z9O1M7-xsfdk",
-        "colab_type": "code",
-        "outputId": "b3400f46-b1e5-4237-80b7-8325f6d98f51",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
-        }
-      },
-      "source": [
-        "print(pubprj.columns)\n",
-        "print(publnk.columns)"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Index(['APPLICATION_ID', 'ACTIVITY', 'ADMINISTERING_IC', 'APPLICATION_TYPE',\n",
-            "       'ARRA_FUNDED', 'AWARD_NOTICE_DATE', 'BUDGET_START', 'BUDGET_END',\n",
-            "       'CFDA_CODE', 'CORE_PROJECT_NUM', 'ED_INST_TYPE', 'FOA_NUMBER',\n",
-            "       'FULL_PROJECT_NUM', 'FUNDING_ICs', 'FUNDING_MECHANISM', 'FY', 'IC_NAME',\n",
-            "       'NIH_SPENDING_CATS', 'ORG_CITY', 'ORG_COUNTRY', 'ORG_DEPT',\n",
-            "       'ORG_DISTRICT', 'ORG_DUNS', 'ORG_FIPS', 'ORG_IPF_CODE', 'ORG_NAME',\n",
-            "       'ORG_STATE', 'ORG_ZIPCODE', 'PHR', 'PI_IDS', 'PI_NAMEs',\n",
-            "       'PROGRAM_OFFICER_NAME', 'PROJECT_START', 'PROJECT_END', 'PROJECT_TERMS',\n",
-            "       'PROJECT_TITLE', 'SERIAL_NUMBER', 'STUDY_SECTION', 'STUDY_SECTION_NAME',\n",
-            "       'SUBPROJECT_ID', 'SUFFIX', 'SUPPORT_YEAR', 'DIRECT_COST_AMT',\n",
-            "       'INDIRECT_COST_AMT', 'TOTAL_COST', 'TOTAL_COST_SUB_PROJECT'],\n",
-            "      dtype='object')\n",
-            "Index(['PMID', 'PROJECT_NUMBER'], dtype='object')\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -394,6 +370,77 @@
       },
       "source": [
         "From just one year - we have 650K worth of articles!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ma4GxSaUeSeu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "50864a31-5da3-4051-f1ed-7339e1474114"
+      },
+      "source": [
+        "'''\n",
+        "\n",
+        "import pandas as pd\n",
+        "import glob\n",
+        "'''\n",
+        "# The purpose of this script is to append pmids to NIH project details files so that we can extract the author affiliation from that data\n",
+        "# The files are located in ~/s3-drive/NIH pubs/\n",
+        "'''\n",
+        "all_files = glob.glob(“./pub_to_project ID/RePORTER_PUBLNK_C_20*.csv”)\n",
+        "all_files\n",
+        "li=[]\n",
+        "for filename in all_files:\n",
+        "    df = pd.read_csv(filename, index_col=None, header=0)\n",
+        "    li.append(df)\n",
+        "pub_project = pd.concat(li, axis=0, ignore_index=True)\n",
+        "print(pub_project.head())\n",
+        "all_proj_files = glob.glob(“./projects/RePORTER_PRJ_C_FY*.csv”)\n",
+        "l=[]\n",
+        "print(“loading project files..“)\n",
+        "for filename in all_proj_files:\n",
+        "    print(“working on “+filename)\n",
+        "    df = pd.read_csv(filename, index_col=None, header=0,encoding = ‘ISO-8859-1’, usecols=[“CORE_PROJECT_NUM”, “ORG_CITY”, “ORG_COUNTRY”, “ORG_DEPT”, “ORG_NAME”,“ORG_STATE”,“ORG_ZIPCODE”, “PI_IDS”, “PI_NAMEs” ] )\n",
+        "    l.append(df)\n",
+        "print(“merging the projects data”)\n",
+        "projects = pd.concat(l, axis=0, ignore_index=True)\n",
+        "print(projects.head())\n",
+        "projects = projects.rename(columns = {‘CORE_PROJECT_NUM’:‘PROJECT_NUMBER’})\n",
+        "projects.head()\n",
+        "print(\"merging the dataframes\")\n",
+        "df = pd.merge(pub_project, projects, how=‘inner’, on = ‘PROJECT_NUMBER’)\n",
+        "df.head(10)\n",
+        "print(\"removing duplicates\")\n",
+        "df= df.drop_duplicates('PMID')\n",
+        "df.to_csv(‘output_no_dup.csv’,encoding=‘utf-8’)\n",
+        "'''"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nall_files = glob.glob(“./pub_to_project ID/RePORTER_PUBLNK_C_20*.csv”)\\nall_files\\nli=[]\\nfor filename in all_files:\\n    df = pd.read_csv(filename, index_col=None, header=0)\\n    li.append(df)\\npub_project = pd.concat(li, axis=0, ignore_index=True)\\nprint(pub_project.head())\\nall_proj_files = glob.glob(“./projects/RePORTER_PRJ_C_FY*.csv”)\\nl=[]\\nprint(“loading project files..“)\\nfor filename in all_proj_files:\\n    print(“working on “+filename)\\n    df = pd.read_csv(filename, index_col=None, header=0,encoding = ‘ISO-8859-1’, usecols=[“CORE_PROJECT_NUM”, “ORG_CITY”, “ORG_COUNTRY”, “ORG_DEPT”, “ORG_NAME”,“ORG_STATE”,“ORG_ZIPCODE”, “PI_IDS”, “PI_NAMEs” ] )\\n    l.append(df)\\nprint(“merging the projects data”)\\nprojects = pd.concat(l, axis=0, ignore_index=True)\\nprint(projects.head())\\nprojects = projects.rename(columns = {‘CORE_PROJECT_NUM’:‘PROJECT_NUMBER’})\\nprojects.head()\\nprint(\"merging the dataframes\")\\ndf = pd.merge(pub_project, projects, how=‘inner’, on = ‘PROJECT_NUMBER’)\\ndf.head(10)\\nprint(\"removing duplicates\")\\ndf= df.drop_duplicates(\\'PMID\\')\\ndf.to_csv(‘output_no_dup.csv’,encoding=‘utf-8’)\\n\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "ERROR! Session/line number was not unique in database. History logging moved to new session 59\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
