Small change to last line.

--- a/code/1_Getting_Labeled_Data.ipynb
+++ b/code/1_Getting_Labeled_Data.ipynb
@@ -251,34 +251,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UmDJHRTz1W2l",
+        "id": "-2E68bnQT070",
         "colab_type": "code",
-        "outputId": "31588cad-2bf9-432a-aa9c-6c3dc8a7bf29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        }
+        },
+        "outputId": "1cdd4a50-5df0-40ad-b956-5566c7e73531"
       },
       "source": [
-        "df.groupby(\"FY\").size()"
+        "df.groupby('FY')['PMID'].nunique()"
       ],
-      "execution_count": 30,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "FY\n",
-              "2009    1730368\n",
-              "2015    1323080\n",
-              "2018    2220343\n",
-              "dtype: int64"
+              "2009    195241\n",
+              "2015    200104\n",
+              "2018    162931\n",
+              "Name: PMID, dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 57
         }
       ]
     },
@@ -289,7 +289,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Theoretically, we have 5 million publications to use, we enough pre 2014 to see how our enriched dataset helps."
+        "Theoretically, we have 250K publications to use, with enough pre-2014 to see how our enriched dataset helps."
       ]
     }
   ]
