--- a/code/1_clean_NIH_dataset.ipynb
+++ b/code/1_clean_NIH_dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "clean_NIH_dataset.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNENEsWCVhM09NLklifglFD",
+      "authorship_tag": "ABX9TyOTOnQs6CrDN7T+8pNkfU0l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,23 +29,23 @@
       "metadata": {
         "id": "kum9U_Sj53vz",
         "colab_type": "code",
-        "outputId": "61067339-21a1-4b5e-9798-7b4b7318bce6",
+        "outputId": "8b9858c9-b52a-421b-9009-9f88956016d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 102
         }
       },
       "source": [
         "!pip install boto"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting boto\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/23/10/c0b78c27298029e4454a472a1919bde20cb182dab1662cec7f2ca1dcc523/boto-2.49.0-py2.py3-none-any.whl (1.4MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.4MB 1.4MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.4MB 2.9MB/s \n",
             "\u001b[?25hInstalling collected packages: boto\n",
             "Successfully installed boto-2.49.0\n"
           ],
@@ -95,16 +95,16 @@
       "metadata": {
         "id": "4loiBND98HfO",
         "colab_type": "code",
-        "outputId": "d17dbb30-0418-4937-eb83-c2ca59889423",
+        "outputId": "2b5da617-2c4d-490c-8002-a6fbe2fcc1c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
+          "height": 419
         }
       },
       "source": [
         "df"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +249,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -267,12 +267,12 @@
         "    if (len(each_name) == 1):\n",
         "      new_name = \"BAD_NAME\"\n",
         "    elif (len(each_name) == 2):\n",
-        "      new_name = each_name[0] + \"_\" + each_name[1][0] \n",
+        "      new_name = each_name[0].capitalize() + \", \" + each_name[1][0].upper()\n",
         "    else:\n",
         "      if len(each_name[2]) == 1:\n",
-        "        new_name = each_name[0] + \"_\" + each_name[1][0] + each_name[2]\n",
+        "        new_name = each_name[0].capitalize() + \", \" + each_name[1][0].upper() + each_name[2].upper()\n",
         "      else:\n",
-        "        new_name = each_name[0] + \"_\" + each_name[1][0] + each_name[2][0]\n",
+        "        new_name = each_name[0].capitalize() + \", \" + each_name[1][0].upper() + each_name[2][0].upper()\n",
         "  except:\n",
         "    print(names)\n",
         "  return new_name\n",
@@ -328,16 +328,16 @@
       "metadata": {
         "id": "GN249ZWVeGIt",
         "colab_type": "code",
+        "outputId": "9e0136b9-fdaf-4854-ffb5-7dcbff762b84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "6b7036ac-96b2-4a23-bde9-0e2abeda34f9"
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 204,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
               "      <td>2009</td>\n",
               "      <td>1858712;</td>\n",
               "      <td>TUAN, ROCKY S;</td>\n",
-              "      <td>tuan_rs</td>\n",
+              "      <td>Tuan, RS</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -386,7 +386,7 @@
               "      <td>2009</td>\n",
               "      <td>1858712;</td>\n",
               "      <td>TUAN, ROCKY S;</td>\n",
-              "      <td>tuan_rs</td>\n",
+              "      <td>Tuan, RS</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -395,7 +395,7 @@
               "      <td>2009</td>\n",
               "      <td>1858712;</td>\n",
               "      <td>TUAN, ROCKY S;</td>\n",
-              "      <td>tuan_rs</td>\n",
+              "      <td>Tuan, RS</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -404,7 +404,7 @@
               "      <td>2009</td>\n",
               "      <td>1858712;</td>\n",
               "      <td>TUAN, ROCKY S;</td>\n",
-              "      <td>tuan_rs</td>\n",
+              "      <td>Tuan, RS</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -413,7 +413,7 @@
               "      <td>2009</td>\n",
               "      <td>1858712;</td>\n",
               "      <td>TUAN, ROCKY S;</td>\n",
-              "      <td>tuan_rs</td>\n",
+              "      <td>Tuan, RS</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -421,17 +421,17 @@
             ],
             "text/plain": [
               "       PMID PROJECT_NUMBER    FY    PI_IDS        PI_NAMEs cleaned_name\n",
-              "0  19415686    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;      tuan_rs\n",
-              "1  19650110    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;      tuan_rs\n",
-              "2  19283731    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;      tuan_rs\n",
-              "3  19274753    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;      tuan_rs\n",
-              "4  19479830    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;      tuan_rs"
+              "0  19415686    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;     Tuan, RS\n",
+              "1  19650110    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;     Tuan, RS\n",
+              "2  19283731    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;     Tuan, RS\n",
+              "3  19274753    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;     Tuan, RS\n",
+              "4  19479830    ZIAAR041131  2009  1858712;  TUAN, ROCKY S;     Tuan, RS"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 204
+          "execution_count": 13
         }
       ]
     },
@@ -440,11 +440,11 @@
       "metadata": {
         "id": "e6ILIv_RAvk-",
         "colab_type": "code",
+        "outputId": "b49e1aca-7021-4cd3-882c-e7e0a6369ed9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b8316cc0-e752-4ada-829f-61db53a1f344"
+        }
       },
       "source": [
         "df.to_csv(\"./NIH_postcleaning.csv\")\n",
@@ -454,19 +454,19 @@
         "  mykey.key = 'NIH_postcleaning.csv'\n",
         "mykey.set_contents_from_filename('./NIH_postcleaning.csv')"
       ],
-      "execution_count": 209,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "406607944"
+              "422416018"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 209
+          "execution_count": 14
         }
       ]
     }
