--- a/code/2_metric_classification.ipynb
+++ b/code/2_metric_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2_metric_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN0PThS26tQ1dQKF9ynfZdR",
+      "authorship_tag": "ABX9TyPYIphZcLiDAlmTgqzNupZW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,10 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from collections import Counter "
+        "from collections import Counter \n",
+        "from sklearn.metrics import precision_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from collections import defaultdict"
       ],
       "execution_count": 0,
       "outputs": []
@@ -226,13 +229,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 139
         },
-        "outputId": "641d9773-d202-480f-c662-513c9499db19"
+        "outputId": "e6655985-b28f-41d9-b71b-363107919716"
       },
       "source": [
         "np.random.seed(42)\n",
-        "df_top['guess'] = np.array(np.random.randint(0,5,size=(len(df_top))))"
+        "df_top['cluster_pred'] = np.array(np.random.randint(0,5,size=(len(df_top))))"
       ],
-      "execution_count": 55,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,22 +266,92 @@
       "metadata": {
         "id": "q5FKA468P30T",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "outputId": "e3501e4f-9980-4e69-ffd8-e0a647610c04"
       },
       "source": [
-        "# Creating a dictionary where each cluster is assigned an ID based off psuedo-code written above\n",
+        "# Creating a dictionary where each cluster is assigned an ID based off psuedo-code written above K_dict[pi_id] = # of cluster\n",
         "K_dict = dict()\n",
+        "set_of_clusters = set(df_top.cluster_pred)\n",
         "#get pi_ids sorted by most productive\n",
         "pi_id_sorted = list(df_top.groupby('PI_IDS').size().sort_values(ascending=False).reset_index()['PI_IDS'])\n",
         "for pi_id in pi_id_sorted:\n",
         "  #Get most popular clusters for each id\n",
-        "  cluster_for_id = [c_id for c_id, _ in Counter(df_top[df_top['PI_IDS'] == pi_id].guess).most_common()]\n",
+        "  cluster_for_id = [c_id for c_id, _ in Counter(df_top[df_top['PI_IDS'] == pi_id].cluster_pred).most_common()]\n",
         "  for c in cluster_for_id:\n",
-        "    if c in K_dict.keys():\n",
+        "    if c not in set_of_clusters:\n",
         "      continue\n",
         "    else:\n",
-        "      K_dict[c] = pi_id\n",
-        "      break"
+        "      K_dict[pi_id] = c\n",
+        "      set_of_clusters.remove(c)\n",
+        "      break\n",
+        "\n",
+        "df_top['cluster_max'] = [K_dict[pid] for pid in df_top.PI_IDS]"
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  app.launch_new_instance()\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E3Bq2a19YJj1",
+        "colab_type": "text"
+      },
+      "source": [
+        "With each cluster being assigned a ID, we can now 'check' our guess and see metrics such as Precision/Recall and mis-integration and mis-separation."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xy8qdofPX6B3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ee2bfce5-e223-4f50-b01b-eb6da2bfafe0"
+      },
+      "source": [
+        "print(\"Precision score: {}, Recall score: {}\".format(precision_score(df_top.cluster_max,df_top.cluster_pred,average='micro'),recall_score(df_top.cluster_max,df_top.cluster_pred,average='micro')))"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Precision score: 0.22262773722627738, Recall score: 0.22262773722627738\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9DZ-A6AUfVBN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "mis_intergration_dict = defaultdict(int)\n",
+        "mis_separation_dict = defaultdict(int)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -286,12 +359,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xy8qdofPX6B3",
+        "id": "xco53Q4xi9nh",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "#mis_separation\n",
+        "\n",
+        "pi_ids = df_top.PI_IDS.unique()\n",
+        "for pi in pi_ids:\n",
+        "  num_clusters = len(df_top[df_top[\"PI_IDS\"] == pi].cluster_pred.unique())\n",
+        "  mis_separation_dict[num_clusters] += 1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VsOaondplFm6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#mis-integration\n",
+        "for clus_int in df_top.groupby('cluster_max')['cluster_pred'].nunique():\n",
+        "  mis_intergration_dict[clus_int] += 1"
       ],
       "execution_count": 0,
       "outputs": []
