--- a/code/2_metric_classification.ipynb
+++ b/code/2_metric_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2_metric_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPYIphZcLiDAlmTgqzNupZW",
+      "authorship_tag": "ABX9TyOnEuzi5MtkfvhqJEH4D0SG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,7 +382,8 @@
         "colab": {}
       },
       "source": [
-        "#mis-integration\n",
+        "#mis-integration - for each cluster, see how many dif people were attributed to it\n",
+        "\n",
         "for clus_int in df_top.groupby('cluster_max')['cluster_pred'].nunique():\n",
         "  mis_intergration_dict[clus_int] += 1"
       ],
