Normalized mis-integration and mis-separation

--- a/code/2_metric_classification.ipynb
+++ b/code/2_metric_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "2_metric_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOnEuzi5MtkfvhqJEH4D0SG",
+      "authorship_tag": "ABX9TyMVIcirF8Zw3EhUfVOjngYa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -229,13 +229,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 139
         },
-        "outputId": "e6655985-b28f-41d9-b71b-363107919716"
+        "outputId": "f5249e4d-7381-4391-e3f5-2edfe665b3df"
       },
       "source": [
         "np.random.seed(42)\n",
         "df_top['cluster_pred'] = np.array(np.random.randint(0,5,size=(len(df_top))))"
       ],
-      "execution_count": 121,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 139
         },
-        "outputId": "e3501e4f-9980-4e69-ffd8-e0a647610c04"
+        "outputId": "8143b94c-4d8c-4956-e1dc-c70828cb1a8d"
       },
       "source": [
         "# Creating a dictionary where each cluster is assigned an ID based off psuedo-code written above K_dict[pi_id] = # of cluster\n",
@@ -291,7 +291,7 @@
         "\n",
         "df_top['cluster_max'] = [K_dict[pid] for pid in df_top.PI_IDS]"
       ],
-      "execution_count": 122,
+      "execution_count": 177,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,12 +326,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ee2bfce5-e223-4f50-b01b-eb6da2bfafe0"
+        "outputId": "ca4c0e0a-dded-412e-cc4c-3536cc100683"
       },
       "source": [
         "print(\"Precision score: {}, Recall score: {}\".format(precision_score(df_top.cluster_max,df_top.cluster_pred,average='micro'),recall_score(df_top.cluster_max,df_top.cluster_pred,average='micro')))"
       ],
-      "execution_count": 123,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,10 +366,16 @@
       "source": [
         "#mis_separation\n",
         "\n",
-        "pi_ids = df_top.PI_IDS.unique()\n",
-        "for pi in pi_ids:\n",
-        "  num_clusters = len(df_top[df_top[\"PI_IDS\"] == pi].cluster_pred.unique())\n",
-        "  mis_separation_dict[num_clusters] += 1"
+        "for clus_sep in df_top.groupby('PI_IDS')['cluster_pred'].nunique():\n",
+        "  mis_separation_dict[clus_sep] += 1\n",
+        "\n",
+        "mis_separation_dict = dict(mis_separation_dict)\n",
+        "\n",
+        "total = sum(mis_separation_dict.values())\n",
+        "for key in mis_separation_dict.keys():\n",
+        "  mis_separation_dict[key] /= total\n",
+        "\n",
+        "print(mis_separation_dict)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -379,16 +385,36 @@
       "metadata": {
         "id": "VsOaondplFm6",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8c385884-a405-4bd1-dd55-cb6d3b3c56e5"
       },
       "source": [
         "#mis-integration - for each cluster, see how many dif people were attributed to it\n",
         "\n",
         "for clus_int in df_top.groupby('cluster_max')['cluster_pred'].nunique():\n",
-        "  mis_intergration_dict[clus_int] += 1"
+        "  mis_intergration_dict[clus_int] += 1\n",
+        "\n",
+        "mis_intergration_dict = dict(mis_intergration_dict)\n",
+        "\n",
+        "total = sum(mis_intergration_dict.values())\n",
+        "for key in mis_intergration_dict.keys():\n",
+        "  mis_intergration_dict[key] /= total\n",
+        "\n",
+        "print(mis_intergration_dict)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{5: 1.0}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
